--- a/src/index.jade
+++ b/src/index.jade
@@ -55,7 +55,7 @@ block content
 						if val.grid
 							div.grid-item(class="#{val.grid} #{val.type} #{val.category}")
 								a.article__link(href="#")
-									div.article__img
+									div.article__img(style="background-image:url('#{val.background}')")
 										div.article__tag__container--outer
 											div.article__tag__container--inner
 												img.article__icon(src="#{val.icon}")
@@ -73,7 +73,7 @@ block content
 						else
 							div.grid-item(class="#{val.type} #{val.category}")
 								a.article__link(href="#")
-									div.article__img
+									div.article__img(style="background-image:url('#{val.background}')")
 										div.article__tag__container--outer
 											div.article__tag__container--inner
 												img.article__icon(src="#{val.icon}")
@@ -88,12 +88,6 @@ block content
 											if val.text
 												each paragraph in val.text
 													p.article__text #{paragraph.paragraph}
-					.grid-item.lifestyle
-						p
-							| lifestyle
-					.grid-item.food
-						p
-							| food
 					.grid-item.grid-item-3.lifestyle
 						p
 							| lifestyle
