--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -61,6 +61,14 @@
 					width: 11.842117728%;
 				}
 
+				.article--xmedium &{
+					width: 23.684210526%;
+				}
+
+				.article--medium &{
+					width: 23.684210526%;
+				}
+
 				.article--small--full &{
 					width: 25%;
 					position: absolute;
@@ -108,6 +116,24 @@
 			}
 		}
 
+		.article--xmedium &{
+
+			@include mq(large){
+				width: 50%;
+				height: 100%;
+				float: left;
+			}
+		}
+
+		.article--medium &{
+
+			@include mq(large){
+				width: 50%;
+				height: 100%;
+				float: left;
+			}
+		}
+
 		.article--small--full &{	
 			position: absolute;
 			height: 100%;
@@ -121,6 +147,12 @@
 	//{{article__text}}
 	&__text{
 		.article--full &{
+			@include m-color('black');
+		}
+		.article--xmedium &{
+			@include m-color('black');
+		}
+		.article--medium &{
 			@include m-color('black');
 		}
 		.article--small--full &{
@@ -149,12 +181,44 @@
 					}
 				}
 
+				.article--xmedium &{
+					width: 100%;
+					height: 100%;
+					display: flex;
+					align-items: flex-end;
+					padding: 3.44827586206897%;
+
+					@include mq(large){
+						width: 50%;
+						float: right;
+					}
+				}
+
+				.article--medium &{
+					width: 100%;
+					height: 100%;
+					display: flex;
+					align-items: flex-end;
+					padding: 3.44827586206897%;
+
+					@include mq(large){
+						width: 50%;
+						float: right;
+					}
+				}
+
 				.article--small--full &{
 					width: 100%;
 					height: 100%;
 					display: flex;
 					align-items: flex-end;
 					padding: 3.44827586206897%;
+					/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,000000+100 */
+					background: rgba(0,0,0,1); /* Old browsers */
+					background: -moz-linear-gradient(top,  rgba(255,255,255,0.5) 0%, rgba(0,0,0,0.5) 100%); /* FF3.6-15 */
+					background: -webkit-linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(0,0,0,0.5) 100%); /* Chrome10-25,Safari5.1-6 */
+					background: linear-gradient(to bottom,  rgba(255,255,255,0.5) 0%,rgba(0,0,0,0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+					filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 
 					@include mq(large){
 						position: absolute;
@@ -178,6 +242,12 @@
 	//{{article__title}}
 	&__title{
 		.article--full &{
+			@include m-color('black');
+		}
+		.article--xmedium &{
+			@include m-color('black');
+		}
+		.article--medium &{
 			@include m-color('black');
 		}
 		.article--small--full &{
@@ -209,6 +279,12 @@
 		//{{article__author__name}}
 		&__name{
 			.article--full &{
+				@include m-color('black');
+			}
+			.article--xmedium &{
+				@include m-color('black');
+			}
+			.article--medium &{
 				@include m-color('black');
 			}
 			.article--small--full &{
