--- a/src/page-4.jade
+++ b/src/page-4.jade
@@ -1,12 +1,22 @@
-.grid-item.grid-item-2.food
-	p food
-.grid-item.lifestyle
-	p lifestyle
-.grid-item.food
-	p food
-.grid-item.lifestyle
-	p lifestyle
-.grid-item.fitness
-	p fitness
-.grid-item.grid-item-3.food
-	p food
+each val in site.data.articles
+	- var grid = (val.grid === "undefined" ? '' : val.grid)
+	div.grid-item(class="#{grid} #{val.type} #{val.category}")
+		a.article__link(href="#")
+			div.article__img(style="background-image:url('#{val.background}')")
+				div.article__tag__container--outer
+					div.article__tag__container--inner
+						img.article__icon(src="#{val.icon}")
+						div.article__tag #{val.tag}
+			div.article__text__container--outer
+				div.article__text__container--inner
+					h2.article__title #{val.title}
+					if val.author
+						div.article__author__container
+							if val.author[0].image
+								div.article__author__img(style="background-image:url('#{val.author[0].image}')")
+								div.article__author__name #{val.author[0].name}
+							else
+								div.article__author__name WITH #{val.author[0].name}
+					if val.text
+						each paragraph in val.text
+							p.article__text #{paragraph.paragraph}
