Separate grid and slick css

--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -8,5 +8,6 @@ $colors: (
 	'footer-dark': #333333,
 	'lifestyle': #DB9AC4,
 	'fitness': #F6A661,
-	'food': #4CC0B7
+	'food': #4CC0B7,
+	'article-grey': #DFDFDF
 );
