--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -16,7 +16,9 @@
 @import "06_components/_components.article.scss";
 @import "06_components/_components.column.scss";
 @import "06_components/_components.footer.scss";
+@import "06_components/_components.grid.scss";
 @import "06_components/_components.header.scss";
+@import "06_components/_components.slick.scss";
 @import "06_components/_components.stories.scss";
 @import "06_components/_components.subscribe.scss";
 
