--- a/src/index.jade
+++ b/src/index.jade
@@ -2,11 +2,26 @@ extends _layouts/base
 
 block content
 	div.container
-		div.stories__container
-			div.stories__container__frame(stlye="background-color:red;") 1
-			div.stories__container__frame 2
-			div.stories__container__frame 3
-			div.stories__container__frame 4
+		div.slick__container
+			div.slick__container__frame
+				div.row(style="height:100%;")
+					div.columns.large-8(style="height:100%;")
+						div(style="height: 54.666666666666666667%;").article--small--full.fitness
+							a.article__link(href='#')
+								.article__img(style="background-image:url('/images/placeholder.jpg')")
+								.article__tag__container--outer
+									.article__tag__container--inner
+										img.article__icon(src='favicon.ico')
+										.article__tag FITNESS
+								.article__text__container--outer
+									.article__text__container--inner
+										h2.article__title Exercise tip: Take the dogs out
+										.article__author__container
+											.article__author__img(style="background-image:url('favicon.ico')")
+											.article__author__name TODD McCULLOUGH
+			div.slick__container__frame 2
+			div.slick__container__frame 3
+			div.slick__container__frame 4
 		div.row
 			div.columns.large-12
 				.asadasdadsljkhasd
