--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -256,6 +256,10 @@
 		.article--small--half &{
 			@include m-color('black');
 		}
+
+		.article--small--full.grid-item-6 &{
+			font-size: 16px;
+		}
 	}
 
 	//{{article__author}}
