--- a/src/_styles/06_components/_components.slick.scss
+++ b/src/_styles/06_components/_components.slick.scss
@@ -17,7 +17,7 @@ $c2: #e84a69;
     background: $c1;
     color: white;
     //padding: 40px 0;
-    text-align: center;
+    //text-align: center;
 }
 .slick-prev {
     left: 25px;
