--- a/src/_styles/06_components/_components.grid.scss
+++ b/src/_styles/06_components/_components.grid.scss
@@ -32,6 +32,17 @@
 	}
 }
 
+.grid-item--slick {
+	@include m-bgcolor('article-grey');
+	float: left;
+}
+
+// Masonry Articles
 .grid-item-2 { width: 100%; }
 .grid-item-3 { width: 65.5171724138%; }
 .grid-item-4 { width: 48.27586206896552%; }
+
+// Slick Articles
+.grid-item-5 { width: 66.66666666666666667%; height: 54.666666666666666667%}
+.grid-item-6 { width: 16.666666666666666665%; height: 17.333333333333333333333333333333%}
+.grid-item-7 { width: 33.33333333333333333%; height: 37.333333333333333333666666666667%}
