--- a/src/index.jade
+++ b/src/index.jade
@@ -4,21 +4,28 @@ block content
 	div.container
 		div.slick__container
 			div.slick__container__frame
-				div.row(style="height:100%;")
-					div.columns.large-8(style="height:100%;")
-						div(style="height: 54.666666666666666667%;").article--small--full.fitness
-							a.article__link(href='#')
-								.article__img(style="background-image:url('/images/placeholder.jpg')")
-								.article__tag__container--outer
-									.article__tag__container--inner
-										img.article__icon(src='favicon.ico')
-										.article__tag FITNESS
-								.article__text__container--outer
-									.article__text__container--inner
-										h2.article__title Exercise tip: Take the dogs out
-										.article__author__container
-											.article__author__img(style="background-image:url('favicon.ico')")
-											.article__author__name TODD McCULLOUGH
+				each val in site.data.articlesslick
+					- var grid = (val.grid === "undefined" ? '' : val.grid)
+					div.grid-item--slick(class="#{grid} #{val.type} #{val.category}")
+						a.article__link(href="#")
+							div.article__img(style="background-image:url('#{val.background}')")
+								div.article__tag__container--outer
+									div.article__tag__container--inner
+										img.article__icon(src="#{val.icon}")
+										div.article__tag #{val.tag}
+							div.article__text__container--outer
+								div.article__text__container--inner
+									h2.article__title #{val.title}
+									if val.author
+										div.article__author__container
+											if val.author[0].image
+												div.article__author__img(style="background-image:url('#{val.author[0].image}')")
+												div.article__author__name #{val.author[0].name}
+											else
+												div.article__author__name WITH #{val.author[0].name}
+									if val.text
+										each paragraph in val.text
+											p.article__text #{paragraph.paragraph}
 			div.slick__container__frame 2
 			div.slick__container__frame 3
 			div.slick__container__frame 4
