--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -8,5 +8,7 @@ $colors: (
 	'lifestyle': #DB9AC4,
 	'fitness': #F6A661,
 	'food': #4CC0B7,
-	'article-grey': #DFDFDF
+	'article-grey': #DFDFDF,
+	'slick-dot-inactive': #818181,
+	'slick-dot-active': #2C6582,
 );
