--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -6,6 +6,7 @@
 		position: relative;
 		height: 100%;
 		overflow: hidden;
+		outline: none;
 
 		// Hover tag expand full and reduce opacity
 		&:hover{
