Make slick slide 100vw when small displays (may need to make a 1160 breakpoint specially for this one

--- a/src/_styles/06_components/_components.slick.scss
+++ b/src/_styles/06_components/_components.slick.scss
@@ -4,8 +4,12 @@
 
     &__frame{
     	height: 700px;
-        width: 1160px;
+        width: 100vw;
         outline: none;
+
+        @include mq(large){
+            width: 1160px;
+        }
     }
 }
 
