--- a/src/_styles/06_components/_components.standard.scss
+++ b/src/_styles/06_components/_components.standard.scss
@@ -1,12 +1,16 @@
 .standard{
 
 	&__img{
+		width: 100%;
 
 		&__container{
-
+			position: relative;
 		}
 
 		&__text{
+			position: absolute;
+			top: 0;
+			left: 0;
 			padding: 10px;
 			width: 100px;
 
@@ -14,5 +18,43 @@
 				@include m-bgcolor('fitness');
 			}
 		}
+	}
+
+	&__title{
+
+		&__container{
+			border-bottom: 1px solid grey;
+			margin-bottom: 5px;
+		}
+	}
+
+	&__content{
+
+	}
+
+	&__read{
+
+		&__container{
+			display: flex;
+			align-items: center;
+		}
+
+		&__icon{
+			margin-right: 5px;
+		}
+
+		&__text{
+
+		}
+	}
+
+	&__stats{
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	&__comments{
+		border-left: 1px solid grey;
 	}
 }
