--- a/src/standard.jade
+++ b/src/standard.jade
@@ -39,3 +39,25 @@ block content
 					p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
 
 					p Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+				div.tag__container
+					ul.tag__list
+						li.tag__list__enclosure 
+							a(href="#") #lifestyle
+						li.tag__list__enclosure 
+							a(href="#") #training
+						li.tag__list__enclosure 
+							a(href="#") #fitness
+						li.tag__list__enclosure 
+							a(href="#") #exercise
+						li.tag__list__enclosure 
+							a(href="#") #gettingfit
+				div.author__container
+					div.author__img__container(style="background-image:url('/images/placeholder3.jpg');")
+					div.author__info
+						div.author__name OASHEEY KEY
+						div.author__text Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. <a href="#">Nulla consequat massa quis enim</a>.
+					div.author__join__container--outer
+						div.author__join__container--center
+							div.author__join__container--inner
+								img(src="favicon.ico")
+								div.author__join__text Join in the discussion
