--- a/src/standard.jade
+++ b/src/standard.jade
@@ -61,3 +61,4 @@ block content
 							div.author__join__container--inner
 								img(src="favicon.ico")
 								div.author__join__text Join in the discussion
+				a.standard__comments--view(href="#") VIEW COMMENTS <small>(</small>3<small>)</small>
