--- a/src/_styles/06_components/_components.standard.scss
+++ b/src/_styles/06_components/_components.standard.scss
@@ -20,6 +20,19 @@
 		}
 	}
 
+	&__content{
+
+		figure{
+			max-width: 50%;
+			margin: 0 20px 0 0;
+			float: left;
+		}
+
+		figcaption{
+			font-size: 12px;
+		}
+	}
+
 	&__title{
 
 		&__container{
