--- a/src/standard.jade
+++ b/src/standard.jade
@@ -6,11 +6,14 @@ block content
 			div.columns.large-12
 				div.breadcrumb__container
 					ul.breadcrumb__list
-					li.breadcrumb__list__enclosure HOME
+					li.breadcrumb__list__enclosure 
+						a.breadcrumb__list__enclosure__link(href="#") HOME
 					li.breadcrumb__list__enclosure.breadcrumb__list__enclosure--divider -
-					li.breadcrumb__list__enclosure FITNESS
+					li.breadcrumb__list__enclosure 
+						a.breadcrumb__list__enclosure__link(href="#") FITNESS
 					li.breadcrumb__list__enclosure.breadcrumb__list__enclosure--divider -
-					li.breadcrumb__list__enclosure TRAINING
+					li.breadcrumb__list__enclosure 
+						a.breadcrumb__list__enclosure__link(href="#") TRAINING
 		div.row
 			div.columns.large-12
 				div.standard__img__container
@@ -33,6 +36,10 @@ block content
 					p Qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
 
 					p Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. 
+
+					figure
+						img(src="/images/placeholder.jpg")
+						figcaption Group trainings in the evening unde omnis vero accusamus et atque deserunt.
 
 					p A sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
 
