--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -13,13 +13,17 @@
 @import "02_tools/_tools.mixin.mq.scss";
 @import "02_tools/_tools.mixin.zindex.scss";
 @import "03_generic/_generic.fonts.scss";
+@import "06_components/_components.author.scss";
 @import "06_components/_components.article.scss";
+@import "06_components/_components.breadcrumb.scss";
 @import "06_components/_components.column.scss";
 @import "06_components/_components.footer.scss";
 @import "06_components/_components.grid.scss";
 @import "06_components/_components.header.scss";
 @import "06_components/_components.slick.scss";
+@import "06_components/_components.standard.scss";
 @import "06_components/_components.subscribe.scss";
+@import "06_components/_components.tag.scss";
 
 // Import Foundation Module
 @import "../../node_modules/foundation-sites/scss/foundation";
