--- a/src/_styles/06_components/_components.slick.scss
+++ b/src/_styles/06_components/_components.slick.scss
@@ -1,77 +1,80 @@
 .slick__container {
-    // width: 100%;
-    padding: 35px 0;
 
-    &__frame{
-    	height: 700px;
-        width: 100vw;
-        outline: none;
+    &--index{
+        // width: 100%;
+        padding: 35px 0;
 
-        @include mq(large){
-            width: 1160px;
+        &__frame{
+        	height: 700px;
+            width: 100vw;
+            outline: none;
+
+            @include mq(large){
+                width: 1160px;
+            }
+        }
+
+        .slick-slide img {
+            display: none;
+        }
+
+        .slick-slide {
+            @include m-color('white');
+            //padding: 40px 0;
+            //text-align: center;
+        }
+        .slick-prev {
+            left: 25px;
+            z-index: 1;
+        }
+
+        .slick-next {
+            right: 25px;
+        }
+        .slick-prev:before, .slick-next:before {
+            font-size: 70px;
+            opacity: 0.9;
+        }
+
+        // Left Arrow
+        .slick-next:before{
+            margin-left: -685px;
+        }
+
+        // Right Arrow
+        .slick-prev:before {
+            margin-left: 315px;
+        }
+
+        // Container that holds all dots
+        .slick-dots {
+            margin-top: 30px;
+            position: static;
+        }
+
+        // The container for each dot
+        .slick-dots li{
+            margin: 0 45px;
+        }
+
+        // All dots
+        .slick-dots li button:before{
+            opacity: 1;
+            @include m-color('slick-dot-inactive');
+            @include m-bgcolor('slick-dot-inactive');
+            height: 10px;
+            width: 60px;
+            border-radius: 10px;
+            content: ''; // replacing • from default slick
+            transition: all 0.3s;
+            -webkit-transition: all 0.3s;
+        }
+
+        // Active dot
+        .slick-dots li.slick-active button:before{
+            opacity: 1;
+            @include m-color('slick-dot-active');
+            @include m-bgcolor('slick-dot-active');
         }
     }
-}
-
-.slick-slide img {
-    display: none;
-}
-
-.slick-slide {
-    @include m-color('white');
-    //padding: 40px 0;
-    //text-align: center;
-}
-.slick-prev {
-    left: 25px;
-    z-index: 1;
-}
-
-.slick-next {
-    right: 25px;
-}
-.slick-prev:before, .slick-next:before {
-    font-size: 70px;
-    opacity: 0.9;
-}
-
-// Left Arrow
-.slick-next:before{
-    margin-left: -685px;
-}
-
-// Right Arrow
-.slick-prev:before {
-    margin-left: 315px;
-}
-
-// Container that holds all dots
-.slick-dots {
-    margin-top: 30px;
-    position: static;
-}
-
-// The container for each dot
-.slick-dots li{
-    margin: 0 45px;
-}
-
-// All dots
-.slick-dots li button:before{
-    opacity: 1;
-    @include m-color('slick-dot-inactive');
-    @include m-bgcolor('slick-dot-inactive');
-    height: 10px;
-    width: 60px;
-    border-radius: 10px;
-    content: ''; // replacing • from default slick
-    transition: all 0.3s;
-    -webkit-transition: all 0.3s;
-}
-
-// Active dot
-.slick-dots li.slick-active button:before{
-    opacity: 1;
-    @include m-color('slick-dot-active');
-    @include m-bgcolor('slick-dot-active');
 }
