--- a/src/standard.jade
+++ b/src/standard.jade
@@ -69,3 +69,31 @@ block content
 								img(src="favicon.ico")
 								div.author__join__text Join in the discussion
 				a.standard__comments--view(href="#") VIEW COMMENTS <small>(</small>3<small>)</small>
+		div
+			div.slick__container--standard(style="background-image: url('/images/placeholder2.jpg');")
+				div.slick__container--standard__frame
+					each val in site.data.articlesslickstandard
+						- var grid = (val.grid === "undefined" ? '' : val.grid)
+						div.grid-item--slick-standard(class="#{grid} #{val.type} #{val.category}")
+							a.article__link(href="#")
+								div.article__img(style="background-image:url('#{val.background}')")
+									div.article__tag__container--outer
+										div.article__tag__container--inner
+											img.article__icon(src="#{val.icon}")
+											div.article__tag #{val.tag}
+								div.article__text__container--outer
+									div.article__text__container--inner
+										h2.article__title #{val.title}
+										if val.author
+											div.article__author__container
+												if val.author[0].image
+													div.article__author__img(style="background-image:url('#{val.author[0].image}')")
+													div.article__author__name #{val.author[0].name}
+												else
+													div.article__author__name WITH #{val.author[0].name}
+										if val.text
+											each paragraph in val.text
+												p.article__text #{paragraph.paragraph}
+				div.slick__container--standard__frame 2
+				div.slick__container--standard__frame 3
+				div.slick__container--standard__frame 4
