--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -11,4 +11,5 @@ $colors: (
 	'article-grey': #DFDFDF,
 	'slick-dot-inactive': #818181,
 	'slick-dot-active': #2C6582,
+	'jointhediscussion': #58A2D1
 );
