--- a/src/standard.jade
+++ b/src/standard.jade
@@ -73,7 +73,7 @@ block content
 			div.slick__container--standard(style="background-image: url('/images/placeholder2.jpg');")
 				each val in site.data.articlesslickstandard
 					- var grid = (val.grid === "undefined" ? '' : val.grid)
-					div.slick__container--standard__frame(style="width:360px;background-color:blue;border:1px solid red;")
+					div.slick__container--standard__frame
 						div.grid-item--slick-standard(class="#{grid} #{val.type} #{val.category}")
 							a.article__link(href="#")
 								div.article__img(style="background-image:url('#{val.background}')")
@@ -94,16 +94,6 @@ block content
 										if val.text
 											each paragraph in val.text
 												p.article__text #{paragraph.paragraph}
-				div.slick__container--standard__frame(style="width:360px;background-color:blue;border:1px solid red;") 1
-				div.slick__container--standard__frame(style="width:360px;background-color:blue;border:1px solid red;") 2
-				div.slick__container--standard__frame(style="width:360px;background-color:blue;border:1px solid red;") 3
-				div.slick__container--standard__frame(style="width:360px;background-color:blue;border:1px solid red;") 4
-				div.slick__container--standard__frame(style="width:360px;background-color:blue;border:1px solid red;") 5
-				div.slick__container--standard__frame(style="width:360px;background-color:blue;border:1px solid red;") 6
-				div.slick__container--standard__frame(style="width:360px;background-color:blue;border:1px solid red;") 7
-				div.slick__container--standard__frame(style="width:360px;background-color:blue;border:1px solid red;") 8
-				div.slick__container--standard__frame(style="width:360px;background-color:blue;border:1px solid red;") 9
-				div.slick__container--standard__frame(style="width:360px;background-color:blue;border:1px solid red;") 10
 
 
 	
