--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -5,13 +5,23 @@ mixin footer(spec)
 	div.footer__container--light
 		div.row
 			div.columns.large-3
-				//-ald logo
+				img.footer__ald(src="/images/ALD-logo-f.png", alt="logo")
 			div.columns.large-4.large-offset-5
-				//-social icons
+				div.footer__social
+					a(href="#")
+						img(src="/images/facebook-f.png", alt="facebook icon")
+					a(href="#")
+						img(src="/images/instagram-F.png", alt="instagram icon")
+					a(href="#")
+						img(src="/images/twitter-f.png", alt="twitter icon")
+					a(href="#")
+						img(src="/images/pinterest-f.png", alt="pinterest icon")
+					a(href="#")
+						img(src="/images/rss-f.png", alt="rss icon")
 		div.row
 			div.columns.large-3
 				div.footer__container--light__text Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
-				//-legendairy logo
+				img.footer__legendairy(src="/images/dairy-australia.png", alt="sponsor")
 			div.columns.large-2.large-offset-1
 				div.footer__container--light__title Fitness
 				ul.footer__container--light__list
