--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -5,6 +5,8 @@ $colors: (
 	'subscribe-btn': #666666,
 	'footer-light': #E2E2E2,
 	'footer-dark': #333333,
+	'footer-title': #58a2d2,
+	'footer-black': #333333,
 	'lifestyle': #DB9AC4,
 	'fitness': #F6A661,
 	'food': #4CC0B7,
