--- a/src/index.jade
+++ b/src/index.jade
@@ -74,7 +74,8 @@ block content
 				nav#pagination
 					p
 						a(href='page-2.html') Page 2
-				div.foo moar pls
+				div.article__more__container
+					img.article__more(src="/images/load-more.png")
 		div.subscribe__container
 			div.row
 				div.columns.large-7.large-centered
