--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -17,6 +17,7 @@
 @import "06_components/_components.article.scss";
 @import "06_components/_components.breadcrumb.scss";
 @import "06_components/_components.column.scss";
+@import "06_components/_components.fonts.scss";
 @import "06_components/_components.footer.scss";
 @import "06_components/_components.grid.scss";
 @import "06_components/_components.header.scss";
