Change location of icons

--- a/src/index.jade
+++ b/src/index.jade
@@ -11,7 +11,7 @@ block content
 							div.article__img(style="background-image:url('#{val.background}')")
 								div.article__tag__container--outer
 									div.article__tag__container--inner
-										img.article__icon(src="#{val.icon}")
+										img.article__icon(src="/images/#{val.icon}")
 										div.article__tag #{val.tag}
 							div.article__text__container--outer
 								div.article__text__container--inner
