--- a/src/index.jade
+++ b/src/index.jade
@@ -71,7 +71,7 @@ block content
 										if val.text
 											each paragraph in val.text
 												p.article__text #{paragraph.paragraph}
-				nav#pagination
+				nav.article__pagination
 					p
 						a(href='page-2.html') Page 2
 				div.article__more__container
