--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -11,6 +11,8 @@ $colors: (
 	'fitness': #F6A661,
 	'food': #4CC0B7,
 	'article-grey': #DFDFDF,
+	'article-black': #1A1A1A,
+	'article-author': #666666,
 	'slick-dot-inactive': #818181,
 	'slick-dot-active': #2C6582,
 	'jointhediscussion': #58A2D1
