--- a/src/page-2.jade
+++ b/src/page-2.jade
@@ -5,7 +5,7 @@ each val in site.data.articles
 			div.article__img(style="background-image:url('#{val.background}')")
 				div.article__tag__container--outer
 					div.article__tag__container--inner
-						img.article__icon(src="#{val.icon}")
+						img.article__icon(src="/images/#{val.icon}")
 						div.article__tag #{val.tag}
 			div.article__text__container--outer
 				div.article__text__container--inner
